--- a/index.html
+++ b/index.html
@@ -26,44 +26,45 @@
         <!-- home section -->
         <div class="ps-full-height" id="home">
 
-            <section class="ps-profile-desc">
-                <div class="ps-section-point-wrapper" data-uk-parallax="opacity: 1, 0;">
-                    <div class="uk-container">
-                        <div class="ps-section-point">
-                            <sup>01</sup>
-                            <span>welcome</span>
-                        </div>
-                    </div>
+            <section class="ps-profile-desc ps-dark-skin uk-light">
+                <div class="ps-slide-bg uk-light" tabindex="-1" data-uk-slideshow="animation: fade; autoplay: true; draggable: false; pause-on-hover: false">
+                    <ul class="uk-slideshow-items ps-slide-wrapper">
+                        <li class="uk-background-cover" data-uk-img data-src="src/img/bg/02.jpg">
+                            <img src="src/img/empty.png" alt="" data-uk-cover>
+                            <div class="uk-overfly uk-position-cover ps-slide-overfly"></div>
+                        </li>
+                    </ul>
                 </div>
 
-                <section class="ps-profile-desc ps-dark-skin uk-light">
-                    <div class="ps-slide-bg uk-light" tabindex="-1" data-uk-slideshow="animation: fade; autoplay: true; draggable: false; pause-on-hover: false">
-                        <ul class="uk-slideshow-items ps-slide-wrapper">
-                            <li class="uk-background-cover" data-uk-img data-src="src/img/bg/01.jpg">
-                                <img src="src/img/empty.png" alt="" data-uk-cover />
-                                <div class="uk-overfly uk-position-cover ps-slide-overfly"></div>
-                            </li>
-                            <li class="uk-background-cover" data-uk-img data-src="src/img/bg/02.jpg">
-                                <img src="src/img/empty.png" alt="" data-uk-cover />
-                                <div class="uk-overfly uk-position-cover ps-slide-overfly"></div>
-                            </li>
-                            <li class="uk-background-cover" data-uk-img data-src="src/img/bg/03.jpg">
-                                <img src="src/img/empty.png" alt="" data-uk-cover />
-                                <div class="uk-overfly uk-position-cover ps-slide-overfly"></div>
-                            </li>
-                        </ul>
-                    </div>
 
-                    <div class="uk-container uk-text-center ps-profile-desc-wrap uk-position-relative">
-                        <h1 class="uk-text-bold ps-shadow-text">
-                            <span>Prangon</span> <span>Sarker</span>
-                        </h1>
-                        <div class="uk-text-bold ps-myjob">
-                            Im a <span id="typed" class="typed"></span>
-                        </div>
+                <div class="uk-container uk-text-center ps-profile-desc-wrap uk-position-relative">
+                    <h1 class="uk-text-bold ps-gradient-text">
+                        <span>Prangon</span> <span>Sarker</span>
+                    </h1>
+                    <div class="uk-text-bold ps-myjob">
+                        Im a <span id="typed" class="typed"></span>
                     </div>
-                </section>
+                </div>
         </div>
+
+        <div class="uk-background-cover" data-uk-img data-src="src/img/bg/02.jpg">
+
+        </div>
+        <div class="ps-section-point-wrapper" data-uk-parallax="opacity: 1, 0;">
+
+            <div class="uk-container">
+                <div class="ps-section-point">
+                    <sup>01</sup>
+                    <span>welcome</span>
+                </div>
+            </div>
+        </div>
+        <div class="ps-graphics">
+            <div class="ps-graphic-1" data-uk-parallax="blur: 0,30;"></div>
+            <div class="ps-graphic-2" data-uk-parallax="blur: 0,30;"></div>
+        </div>
+        </section>
+
         <!-- end home section -->
 
         <!-- main menu -->
