--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
         <div class="ps-full-height" id="home">
 
             <section class="ps-profile-desc ps-dark-skin uk-light">
-                <div class="ps-slide-bg uk-light" tabindex="-1" data-uk-slideshow="animation: fade; autoplay: true; draggable: false; pause-on-hover: false">
-                    <ul class="uk-slideshow-items ps-slide-wrapper">
-                        <li class="uk-background-cover" data-uk-img data-src="src/img/bg/02.jpg">
-                            <img src="src/img/empty.png" alt="" data-uk-cover>
-                            <div class="uk-overfly uk-position-cover ps-slide-overfly"></div>
-                        </li>
-                    </ul>
+                <div class="ps-video-wrapper">
+                    <video autoplay loop muted playsinline id="myVideo" class="ps-video-bg">
+                <source src="src/video/01.mp4" type="video/mp4">
+              </video>
+                    <div class="uk-overfly uk-position-cover ps-video-overfly"></div>
                 </div>
 
 
