--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
                 <div class="uk-container uk-text-center ps-profile-desc-wrap uk-position-relative">
-                    <h1 class="uk-text-bold ps-gradient-text">
+                    <h1 class="uk-text-bold ps-shadow-text">
                         <span>Prangon</span> <span>Sarker</span>
                     </h1>
                     <div class="uk-text-bold ps-myjob">
@@ -277,6 +277,27 @@
                                             <div class="uk-text-small">
                                                 <p>
                                                     Dhaka Board <br> GPA 5.00 <br> February 2020
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="ps-resume-item">
+                                            <div class="ps-resume-item-date">
+                                                <div class="ps-resume-item-date-icon">
+                                                    <span data-uk-icon="calendar"></span>
+                                                </div>
+                                                <div class="ps-resume-item-date-text">
+                                                    <span>2021 - 2022</span>
+                                                </div>
+                                            </div>
+                                            <h4 class="ps-section-title">
+                                                Freelancing Course
+                                            </h4>
+                                            <strong>10 Minute School</strong>
+                                            <div class="uk-text-small">
+                                                <p>
+                                                    Successfully completed <br> CERTIFICATE ID: 620e0ae7e95a6
                                                 </p>
                                             </div>
                                         </div>
