--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                                 <div class="ps-my-profile-desc-top">
                                     <h2 class="ps-section-title">Hello There!</h2>
                                     <p>
-                                        I always believe that the best way is to choose a career based on our passions and visions. So when I was at school I discovered my passions for coding & designing. Now in college I pursuing those skills with some wonderful individuals. Currently, I'm
-                                        operating as General Secretary in BAF Shaheen School Dhaka Information Technology Club. I like to work with people and am passionate about learning new things from others. Therefore, I am always open to sharing
-                                        my skills & abilities with others.
+                                        I always believe that the best way to pursue a profession is to comply with our passions and visions. So when I was at school I discovered my passions for coding & designing. Then after school life, I came to college and start to improve those skills
+                                        with some wonderful individuals. After working for a while there I had the chance to become the General Secretary of an amazing IT Organization (SDITC). From there now I am operating as an independent developer.
+                                        Therefore, I am always open to sharing my skills & abilities with others.
                                     </p>
                                 </div>
                                 <div class="ps-my-profile-desc-bottom ps-bg-soft">
