--- a/project/project-details-01.html
+++ b/project/project-details-01.html
@@ -102,8 +102,8 @@
             <h5>Web Design, 21 September 2021</h5>
             <hr />
             <p>
-                In this project I made a modern IT services website. It is designed for BAF Shaheen Collge Dhaka Information Technology Club (SDITC) to promote its IT services. It's great fun while making this website with the latest Divi Supreme & Blossom. It comes
-                with a high-quality design & demonstration. It’s 100% responsive, it will work nicely on all smart devices(smartphones, tablets, PCs, and desktops). It’s also well documented.
+                In this project, I made a modern IT services website. It is designed for BAF Shaheen Collge Dhaka Information Technology Club (SDITC) to promote its IT services. It's great fun while make this website with the latest Divi Supreme & Blossom. It comes with
+                a high-quality design & demonstration. It’s 100% responsive, it will work nicely on all smart devices(smartphones, tablets, PCs, and desktops). It’s also well documented.
             </p>
             <div data-uk-grid class="uk-child-width-1-2 uk-grid-medium">
                 <div>
