--- a/project/project-details-04.html
+++ b/project/project-details-04.html
@@ -102,8 +102,8 @@
             <h5>Web Design, 23 February 2019</h5>
             <hr />
             <p>
-                I have worked on this project at the time when I started to learn web development. I took this project at my beginner level as a challenge. But It's really fun for me to make this website for school students. They loved it and were very happy to have
-                it for their science organization.
+                I worked on this project at the time when I started to learn web development. I took this project at my beginner level as a challenge. But It's really fun for me to make this website for the school students. They loved it and were very happy to have it
+                for their Science Event competition.
             </p>
             <div class="ps-testi-item">
                 <div class="ps-testi-item-desc">
