--- a/project/project-details-05.html
+++ b/project/project-details-05.html
@@ -103,8 +103,9 @@
             <hr />
             <p></p>
             <p>
-                This is a creative infographic PowerPoint slide. It comes with a Flat, Clean, Minimalist, Elegant, and Flexible design. Its animation is so smooth perfect for Pitch Deck, Creative Agency, Brand Guideline, Report, and personal use. Very easy to change
-                the color schemes. Just pick one of 30+ color themes in your PowerPoint.
+                I have created this Infographic JavaScript presentation and presented this to my client. I also wrote all the digital content of this presentation. This is a creative infographic PowerPoint slide. It comes with a Flat, Clean, Minimalist, Elegant, and
+                Flexible design. Its animation is so smooth perfect for Pitch Deck, Creative Agency, Brand Guideline, Report, and personal use. Very easy to change the color schemes. Just pick one of 30+ color themes in your PowerPoint.
+
 
             </p>
             <div class="ps-testi-item">
