--- a/project/project-details-07.html
+++ b/project/project-details-07.html
@@ -103,7 +103,7 @@
             <hr />
             <p>
                 256 Bit is a Web/Print Magazine Template. The file is well organized with easy customization and editing. This template is created using multiple design Apps. This has a brochure as well as a gorgeous design. Each page features unique layouts. It also
-                contains eye-catching futuristic design.
+                contains an eye-catching futuristic design. I completed this magazine within 15 days. It has two variants Web 3d online version and is also a ready print version.
             </p>
             <div data-uk-grid class="uk-child-width-1-2 uk-grid-medium">
                 <div>
