remove image wrap

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                   >
                     <li class="data-admission">
                       <div class="ps-work-item uk-transition-toggle">
-                        <div class="ps-work-item-img-wrap">
+                        <div >
                           <div class="ps-work-item-img">
                             <img
                               src="src/img/empty.png"
@@ -550,7 +550,7 @@
                     </li>
                     <li class="data-admission">
                       <div class="ps-work-item uk-transition-toggle">
-                        <div class="ps-work-item-img-wrap">
+                        <div >
                           <div class="ps-work-item-img">
                             <img
                               src="src/img/empty.png"
@@ -596,7 +596,7 @@
                     </li>
                     <li class="data-admission">
                       <div class="ps-work-item uk-transition-toggle">
-                        <div class="ps-work-item-img-wrap">
+                        <div >
                           <div class="ps-work-item-img">
                             <img
                               src="src/img/empty.png"
@@ -642,7 +642,7 @@
                     </li>
                     <li class="data-admission">
                       <div class="ps-work-item uk-transition-toggle">
-                        <div class="ps-work-item-img-wrap">
+                        <div >
                           <div class="ps-work-item-img">
                             <img
                               src="src/img/empty.png"
@@ -688,7 +688,7 @@
                     </li>
                     <li class="data-admission">
                       <div class="ps-work-item uk-transition-toggle">
-                        <div class="ps-work-item-img-wrap">
+                        <div >
                           <div class="ps-work-item-img">
                             <img
                               src="src/img/empty.png"
@@ -734,7 +734,7 @@
                     </li>
                     <li class="data-admission">
                       <div class="ps-work-item uk-transition-toggle">
-                        <div class="ps-work-item-img-wrap">
+                        <div >
                           <div class="ps-work-item-img">
                             <img
                               src="src/img/empty.png"
@@ -780,7 +780,7 @@
                     </li>
                     <li class="data-vlogs">
                       <div class="ps-work-item uk-transition-toggle">
-                        <div class="ps-work-item-img-wrap">
+                        <div >
                           <div class="ps-work-item-img">
                             <img
                               src="src/img/empty.png"
@@ -826,7 +826,7 @@
                     </li>
                     <li class="data-vlogs">
                       <div class="ps-work-item uk-transition-toggle">
-                        <div class="ps-work-item-img-wrap">
+                        <div >
                           <div class="ps-work-item-img">
                             <img
                               src="src/img/empty.png"
