--- a/index.html
+++ b/index.html
@@ -98,18 +98,16 @@
                     <div class="uk-navbar-right">
                         <ul class="uk-navbar-nav ps-social-icons">
                             <li>
-                                <a href="https://www.facebook.com/prangon.sarkar.792" target="_blank">
+                                <a href="https://www.facebook.com/share/1BecV3mQH9/" target="_blank">
                                     <span class="uk-icon" data-uk-icon="icon: facebook"></span>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/prangon.ps/" target="_blank">
-                                    <span class="uk-icon" data-uk-icon="icon: instagram"></span>
-                                </a>
+                              <a href="https://t.me/Prangon_Sarker" class="fab fa-telegram" style="font-size: 1.5em;text-decoration: none;" target="_blank"></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/prangon-sarker" target="_blank">
-                                    <span class="uk-icon" data-uk-icon="icon: linkedin"></span>
+                                <a href="https://wa.me/8801738175810" target="_blank">
+                                    <span class="uk-icon" data-uk-icon="icon: whatsapp"></span>
                                 </a>
                             </li>
                         </ul>
