--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                               src="src/img/empty.png"
                               width="383"
                               height="574"
-                              data-src="src/img/work/32.png"
+                              data-src="src/img/work/42.png"
                               class="uk-transition-scale-up uk-transition-opaque"
                               alt=""
                               data-uk-img
@@ -519,7 +519,7 @@
                           >
                             <div>
                               <a
-                                href="src/img/work/32.png"
+                                href="src/img/work/42.png"
                                 class="ps-lightbox uk-transition-slide-left"
                                 data-caption="IT Services"
                               >
@@ -527,7 +527,7 @@
                                   data-uk-icon="icon:plus; ratio:1.2"
                                 ></span>
                               </a>
-                              <a href="https://youtu.be/xc85SDZLxYc?si=pOfXAs2yqkofRaUc" target="_blank">
+                              <a href="https://youtu.be/i8_5fCmI7Sw" target="_blank">
                                 <span 
                                   data-uk-icon="icon:link; ratio:1.2"
                                 ></span>
@@ -536,7 +536,7 @@
                           </div>
                         </div>
                         <a
-                          href="https://youtu.be/xc85SDZLxYc?si=pOfXAs2yqkofRaUc"
+                          href="https://youtu.be/i8_5fCmI7Sw"
                           class="show-portfolio" target="_blank"
                         >
                           <div class="ps-work-item-title">
